# AStar

./: .gitignore
godot/: Block.tscn  Main.tscn  export_presets.cfg  project.godot  rust.gdextension
rust/: Cargo.toml
rust/src/: block.rs  game.rs  lib.rs  video_player.rs
